<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/feed" />
        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/search" />
        <item
            android:id="@+id/menu_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/menu_edit"
            android:icon="@drawable/ic_account_box"
            android:title="@string/edit" />
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/about" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/logout" />
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_about"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="About" />-->
    <!--<item-->
    <!--android:id="@+id/nav_logout"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Logout" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
